--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/react-uv.js",
   "module": "dist/esm/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server --config demo/webpack.config.js --hot --inline",
     "build": "npm run build:umd && npm run build:esm",
     "build:esm": "cross-env BABEL_ENV=esm babel src --out-dir dist/esm",
     "build:umd": "cross-env BABEL_ENV=umd webpack --mode=production"
@@ -36,6 +36,9 @@
     "cross-env": "^7.0.3",
     "webpack": "4.46.0",
     "webpack-cli": "3.3.9",
-    "webpack-dev-server": "3.8.2"
+    "webpack-dev-server": "3.8.2",
+    "html-webpack-plugin": "3.2.0",
+    "react": "16.14",
+    "react-dom": "16.14"
   }
 }
