--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
     "@babel/preset-react": "^7.17.12",
     "babel-loader": "8.2.5",
     "cross-env": "^7.0.3",
-    "webpack": "4.46.0",
-    "webpack-cli": "3.3.9",
-    "webpack-dev-server": "3.8.2",
     "html-webpack-plugin": "3.2.0",
     "react": "16.14",
-    "react-dom": "16.14"
+    "react-dom": "16.14",
+    "webpack": "4.46.0",
+    "webpack-cli": "3.3.9",
+    "webpack-dev-server": "3.8.2"
   }
 }
